--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{{ page.title }}</title>
+	<title>{{site.title}} :: {{page.title }}</title>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
 	{% endif %}
@@ -32,28 +32,28 @@
 	
 	 <!-- Icons -->
   
-	<link rel="apple-touch-icon" sizes="57x57" href="{{ site.url }}assets/icons/apple-touch-icon-57x57.png"/>
-	<link rel="apple-touch-icon" sizes="60x60" href="{{ site.url }}assets/icons/apple-touch-icon-60x60.png"/>
-	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}assets/icons/apple-touch-icon-72x72.png"/>
-	<link rel="apple-touch-icon" sizes="76x76" href="{{ site.url }}assets/icons/apple-touch-icon-76x76.png"/>
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.url }}assets/icons/apple-touch-icon-114x114.png"/>
-	<link rel="apple-touch-icon" sizes="120x120" href="{{ site.url }}assets/icons/apple-touch-icon-120x120.png"/>
-	<link rel="apple-touch-icon" sizes="144x144" href="{{ site.url }}assets/icons/apple-touch-icon-144x144.png"/>
-	<link rel="apple-touch-icon" sizes="152x152" href="{{ site.url }}assets/icons/apple-touch-icon-152x152.png"/>
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}assets/icons/apple-touch-icon-180x180.png"/>
-	<link rel="icon" type="image/png" href="{{ site.url }}assets/icons/favicon-32x32.png" sizes="32x32"/>
-	<link rel="icon" type="image/png" href="{{ site.url }}assets/icons/favicon-194x194.png" sizes="194x194"/>
-	<link rel="icon" type="image/png" href="{{ site.url }}assets/icons/favicon-96x96.png" sizes="96x96"/>
-	<link rel="icon" type="image/png" href="{{ site.url }}assets/icons/android-chrome-192x192.png" sizes="192x192"/>
-	<link rel="icon" type="image/png" href="{{ site.url }}assets/icons/favicon-16x16.png" sizes="16x16"/>
-	<link rel="manifest" href="{{ site.url }}assets/icons/manifest.json"/>
-	<link rel="mask-icon" href="{{ site.url }}assets/icons/safari-pinned-tab.svg" color="#5bbad5"/>
-	<link rel="shortcut icon" href="{{ site.url }}assets/icons/favicon.ico"/>
+	<link rel="apple-touch-icon" sizes="57x57" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-57x57.png"/>
+	<link rel="apple-touch-icon" sizes="60x60" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-60x60.png"/>
+	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-72x72.png"/>
+	<link rel="apple-touch-icon" sizes="76x76" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-76x76.png"/>
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-114x114.png"/>
+	<link rel="apple-touch-icon" sizes="120x120" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-120x120.png"/>
+	<link rel="apple-touch-icon" sizes="144x144" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-144x144.png"/>
+	<link rel="apple-touch-icon" sizes="152x152" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-152x152.png"/>
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ site.BASE_PATH }}/assets/icons/apple-touch-icon-180x180.png"/>
+	<link rel="icon" type="image/png" href="{{ site.BASE_PATH }}/assets/icons/favicon-32x32.png" sizes="32x32"/>
+	<link rel="icon" type="image/png" href="{{ site.BASE_PATH }}/assets/icons/favicon-194x194.png" sizes="194x194"/>
+	<link rel="icon" type="image/png" href="{{ site.BASE_PATH }}/assets/icons/favicon-96x96.png" sizes="96x96"/>
+	<link rel="icon" type="image/png" href="{{ site.BASE_PATH }}/assets/icons/android-chrome-192x192.png" sizes="192x192"/>
+	<link rel="icon" type="image/png" href="{{ site.BASE_PATH }}/assets/icons/favicon-16x16.png" sizes="16x16"/>
+	<link rel="manifest" href="{{ site.BASE_PATH }}/assets/icons/manifest.json"/>
+	<link rel="mask-icon" href="{{ site.BASE_PATH }}/assets/icons/safari-pinned-tab.svg" color="#5bbad5"/>
+	<link rel="shortcut icon" href="{{ site.BASE_PATH }}/assets/icons/favicon.ico"/>
 	<meta name="apple-mobile-web-app-title" content="dafuloth.me"/>
 	<meta name="application-name" content="dafuloth.me"/>
 	<meta name="msapplication-TileColor" content="#da532c"/>
-	<meta name="msapplication-TileImage" content="{{ site.url }}assets/icons/mstile-144x144.png"/>
-	<meta name="msapplication-config" content="{{ site.url }}assets/icons/browserconfig.xml"/>
+	<meta name="msapplication-TileImage" content="{{ site.BASE_PATH }}/assets/icons/mstile-144x144.png"/>
+	<meta name="msapplication-config" content="{{ site.BASE_PATH }}/assets/icons/browserconfig.xml"/>
 	<meta name="theme-color" content="#ffffff"/>
   
 
