--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{{site.title}} :: {{page.title }}</title>
+	<title>{{values.title}} :: {{page.title }}</title>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
 	{% endif %}
