--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{{values.title}} :: {{page.title }}</title>
+	<title>dafuloth.me :: {{page.title }}</title>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
 	{% endif %}
@@ -59,8 +59,8 @@
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
 </head>
-<!-- <body> -->
-<body id = "bootstrap-overrides">
+<body>
+<!-- <body id = "bootstrap-overrides"> -->
 	<!-- Can try assigning arbitrary ID to make it easier to override bootstrap with custom styles in style.css -->
 	<!-- <nav class="navbar navbar-default visible-xs" role="navigation"> -->
 	
