--- a/_includes/post.html
+++ b/_includes/post.html
@@ -94,6 +94,7 @@
       <section class="col-sm-6 author">
         <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}" class="img-rounded author-image" />
 	  <!-- <h4 class="section-title author-name">{{site.author.name}}</h4> -->
+		<p id="sitename">dafuloth.me</p>
         <p class="author-bio">{{site.author.bio}}</p>
       </section>
     </div>
