DO NOT CHANGE ORDER OF STYLES

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,23 @@ body{
 	padding-top: 40px;
 }
 
-p .author-bio {
-	
+/* Trying to override bootstrap for navbar*/
+a .navbar-brand {
+	font-family: 'Share Tech Mono';
+	color: #89CD4E;
+}
+
+.navbar-header {
+	/* color: #e74c3c; */
+	color: #89CD4E !important;
+	font-family: 'Share Tech Mono' !important;
+	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
+}
+
+.btn {
+	/* color: #2B4F3E; #89CD4E; 046A81;*/
+	color: #428BCA !important;
+	font-weight: bold !important;
 }
 
 #sitename {
@@ -210,23 +225,4 @@ footer {
 
 ul.dropdown-menu>li>a>i.fa {
     width: 1.3em;
-}
-
-/* Trying to override bootstrap for navbar*/
-a .navbar-brand {
-	font-family: 'Share Tech Mono';
-	color: #89CD4E;
-}
-
-.navbar-header {
-	/* color: #e74c3c; */
-	color: #89CD4E;
-	font-family: 'Share Tech Mono';
-	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
-}
-
-.btn {
-	/* color: #2B4F3E; #89CD4E; 046A81;*/
-	color: #428BCA;
-	font-weight: bold;
 }
