Making titles consistent

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -5,7 +5,7 @@
 	<!-- <title>dafuloth.me&nbsp;::&nbsp;{{page.title }}</title> -->
 	
 	{% if page.title == dafuloth.me %}
-	<title>dafuloth.me</title>
+	<title>dafuloth.me&nbsp;::&nbsp;HOME</title>
 	{% else %}
 	<title>dafuloth.me&nbsp;::&nbsp;{{page.title }}</title>
 	{% endif %}
