Correcting title conditional

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<!-- <title>dafuloth.me&nbsp;::&nbsp;{{page.title }}</title> -->
 	
-	{% if page.title == dafuloth.me %}
+	{% if page.title == 'dafuloth.me' %}
 	<title>dafuloth.me&nbsp;::&nbsp;HOME</title>
 	{% else %}
 	<title>dafuloth.me&nbsp;::&nbsp;{{page.title }}</title>
