--- a/_includes/default.html
+++ b/_includes/default.html
@@ -64,7 +64,7 @@
 	<meta name="theme-color" content="#ffffff"/>
   
   	<!-- Facebook post icon -->
-  	<!-- <meta property="og:image" content="http://dafuloth.me/assets/icons/favicon-194x194.png" /> -->
+  	<meta property="og:image" content="http://dafuloth.me/assets/icons/favicon-194x194.png" />
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
 </head>
