Added media query to target larger screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,12 @@ article .share .gplus:hover {
 .page-header {
 	color: #e74c3c;
 	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
+}
+
+@media only screen and (min-width: 768px) {
+    .page-header{
         margin-right: 70px;
+    }
 }
 
 article{
