-- Change font size

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -35,6 +35,7 @@
 	-->
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }}"
 	href="{{ site.BASE_PATH }}/feed.xml">
+	<link href='http://fonts.googleapis.com/css?family=Ovo' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
