--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -64,8 +64,8 @@
 <form class="form-group" id="searchform" action="{{ site.BASE_PATH }}/search.html" method="get">
 	<div class="form-group">
   	<label class="sr-only" for="search-box">Search</label>
-    <input type="search" id="search-box" name="query" class="form-control" placeholder="Type to search" autofocus>
+    <input type="search" id="search-box" name="query" required="required" class="form-control" placeholder="Type to search" autofocus>
 	</div>
-  	<button class="btn btn-primary btn-block" type="submit"><i class="fa fa-search-plus"></i></button>
+    <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-search"></i></button>
 </form>
 <!-- sidebar.html end -->
