--- a/_includes/default.html
+++ b/_includes/default.html
@@ -43,6 +43,9 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
+            <a type="button" class="navbar-toggle nav-link" href="{{ site.BASE_PATH }}/search.html">
+                <i class="fa fa-search"></i>
+            </a>
 			{% if site.author.github %}
 			<a type="button" class="navbar-toggle nav-link" href="http://github.com/{{ site.author.github }}">
 				<i class="fa fa-github"></i>
