a:text-decoration=none. normal->hover: color => high contrast.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ article.home h1 a:hover,
 article.home h2 a:hover,
 article.home h3 a:hover,
 article.home h4 a:hover {
-	color: #e74c3c;
+    color: #2a6496;
 }
 
 .author .author-image {
