--- a/_includes/default.html
+++ b/_includes/default.html
@@ -102,7 +102,11 @@
 			</p>
 		</footer>
 	</div>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>
