--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,13 +1,18 @@
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
-	
+<!-- Responsible_Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4039568972335207"
+     data-ad-slot="2733319302"
+     data-ad-format="auto"></ins>
 <article>
 
 	<div class="col-sm-10">
 	 <span class="post-date">
 	   {% assign d = page.date | date: "%d" | plus:'0' %}
-	   {{ page.date | date: "%B" }} 
+	   {{ page.date | date: "%B" }}
 	   {% case d %}
 	     {% when 1 or 21 or 31 %}{{ d }}st,
 	     {% when 2 or 22 %}{{ d }}nd,
@@ -25,28 +30,28 @@
 		  <li><i class="fa fa-folder-open"></i></li>
 		  {% assign categories_list = page.categories %}
 		  {% if categories_list.first[0] == null %}
-			{% for category in categories_list %} 
+			{% for category in categories_list %}
 				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref">
 					{{ category | join: "/" }} <span>({{ site.categories[category].size }})</span>
 					{% unless forloop.last %},{% endunless %}
 				</a></li>
 			{% endfor %}
 		  {% else %}
-			{% for category in categories_list %} 
+			{% for category in categories_list %}
 				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref">
 					{{ category[0] | join: "/" }} <span>/{{ category[1].size }})</span>
 				</a></li>
 			{% endfor %}
 		  {% endif %}
 		</ul>
-		{% endunless %}  
+		{% endunless %}
 
 		{% unless page.tags == empty %}
 		<ul class="list-inline">
 		  <li><i class="fa fa-tags"></i></li>
 		  {% assign tags_list = page.tags %}
 		  {% if tags_list.first[0] == null %}
-			{% for tag in tags_list %} 
+			{% for tag in tags_list %}
 				<li>
 					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag }}-ref">
 					{{ tag }} <span>({{ site.tags[tag].size }})</span>
@@ -55,19 +60,19 @@
 				</li>
 			{% endfor %}
 		  {% else %}
-			{% for tag in tags_list %} 
+			{% for tag in tags_list %}
 				<li>
 					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag[0] }}-ref">
 						{{ tag[0] }} <span>({{ tag[1].size }})</span>
 						{% unless forloop.last %},{% endunless %}
 					</a>
 				</li>
-		   	
+
 			{% endfor %}
 		  {% endif %}
 		  {% assign tags_list = nil %}
 		</ul>
-		{% endunless %}  
+		{% endunless %}
 
 		<hr>
 
@@ -115,9 +120,9 @@
 
 		<hr>
 	</div>
-	
+
 	<div class="col-sm-2 sidebar-2">
-	
+
 	</div>
 </article>
 <div class="clearfix"></div>
