--- a/_includes/post.html
+++ b/_includes/post.html
@@ -75,6 +75,11 @@
          data-ad-client="ca-pub-4039568972335207"
          data-ad-slot="2733319302"
          data-ad-format="auto"></ins>
+         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+       <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+       </script>
 
 		<hr/>
 
