--- a/_includes/default.html
+++ b/_includes/default.html
@@ -48,6 +48,11 @@
 				<i class="fa fa-github"></i>
 			</a>
 			{% endif %}
+			{% if site.author.gitlab %}
+			<a type="button" class="navbar-toggle nav-link" href="http://gitlab.com/{{ site.author.gitlab }}" target="_blank">
+				<i class="fa fa-gitlab"></i>
+			</a>
+			{% endif %}
 			{% if site.author.twitter %}
 			<a type="button" class="navbar-toggle nav-link" href="http://twitter.com/{{ site.author.twitter }}">
 				<i class="fa fa-twitter"></i>
