--- a/_includes/default.html
+++ b/_includes/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140890411-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-140890411-1');
+</script>
 <meta charset="utf-8">
 <title>{{ page.title }}</title> {% if page.description %}
 <meta name="description" content="{{ page.description }}">
