--- a/_includes/default.html
+++ b/_includes/default.html
@@ -22,6 +22,11 @@
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 
+	<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+	<script>
+	  anchors.add();
+	</script>
+	
 	<!-- Le fav and touch icons -->
 	<!-- Update these with your own images
 	<link rel="shortcut icon" href="images/favicon.ico">
