--- a/_includes/default.html
+++ b/_includes/default.html
@@ -28,7 +28,7 @@
         placement: 'left',
         visible: 'always',
      	 };
-     	anchors.add('p');
+     	anchors.add();
 	</script>
 	
 	<!-- Le fav and touch icons -->
