--- a/_includes/default.html
+++ b/_includes/default.html
@@ -22,7 +22,7 @@
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 
-	<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+	<script src="https://sparcopen.github.io/opencon-dei-report/js/anchor.js"></script>
 	<script>
 	anchors.options = {
         placement: 'left',
