--- a/_includes/page.html
+++ b/_includes/page.html
@@ -1,5 +1,8 @@
+<!--
+The below generates a header that isn't interesting
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
+-->
 
 {{ content }}
