--- a/_includes/post.html
+++ b/_includes/post.html
@@ -72,16 +72,15 @@
 		{% endunless %}
 
 		<hr>
-
+<!-- NOT CLEAR HOW WE'LL DO AUTHORS SO REMOVING
 		<div>
-
       <section class="col-sm-6 author">
         <img src="//www.gravatar.com/avatar/{{site.author.email_md5}}" class="img-rounded author-image" />
         <h4 class="section-title author-name">{{site.author.name}}</h4>
         <p class="author-bio">{{site.author.bio}}</p>
       </section>
     </div>
-
+-->
     <div class="clearfix"></div>
 
 		<ul class="pager">
