--- a/_includes/post.html
+++ b/_includes/post.html
@@ -81,6 +81,7 @@
       </section>
     </div>
 -->
+<!-- NOT CLEAR HOW WE'LL USE SO REMOVING FOR NOW
     <div class="clearfix"></div>
 
 		<ul class="pager">
@@ -98,9 +99,8 @@
 
 		<hr>
 	</div>
-
-	<div class="col-sm-2 sidebar-2">
-
-	</div>
+-->
 </article>
+<!-- NO IDEA WHAT THIS DOES
 <div class="clearfix"></div>
+-->
