--- a/_includes/default.html
+++ b/_includes/default.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="{{ page.description }}">
 	{% endif %}
 	<meta name="author" content="{{ site.author.name }}">
-
+	<link href="{{ site.BASE_PATH }}/favicon.ico">
 	<!-- Enable responsive viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
