--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
     </h3>
 </header>
 
-{% if site.author.bio %}
+{% if post.description %}
 <div id="bio" class="text-center">
 	{{ post.description }}
 </div>
