--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 </header>
 
 {% if page.description %}
-<div id="bio" class="text-center">
+<div id="sidebar-description" class="text-center">
 	{{ page.description }}
 </div>
 {% endif %}
