--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,4 +14,10 @@
 </div>
 {% endif %}
 
+{% if page.action %}
+<div id="sidebar-description" class="text-center">
+	{{ page.action }}
+</div>
+{% endif %}
+
 <!-- sidebar.html end -->
