remove link from page title

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
 		<img src="{{ site.BASE_PATH }}/assets/media/sparc_logo.png" style="width:100%"/>
 	</a>
 	<h3 class="title">
-        <a href="{{ site.BASE_PATH }}/">{{ page.title }}</a>
+        {{ page.title }}
     </h3>
 </header>
 
