down with duplication

--- a/_includes/page.html
+++ b/_includes/page.html
@@ -4,5 +4,6 @@ The below generates a header that isn't interesting
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 -->
-
+<article class="home">
 {{ content }}
+</article>
