--- a/_includes/default.html
+++ b/_includes/default.html
@@ -41,7 +41,7 @@
         placement: 'left',
         visible: 'always',
      	 };
-     	anchors.add('H1');
+     	anchors.add('p');
 	</script>
 </body>
 </html>
