--- a/_includes/default.html
+++ b/_includes/default.html
@@ -23,14 +23,15 @@
 </head>
 
 <body>
+	<div class="row">
+		<div class="col-sm-3 sidebar hidden-xs" style="{% if site.sidebar_background_image %}background: url({{site.sidebar_background_image}}) no-repeat !important;{% endif %}">
+			{% include sidebar.html %}
+		</div>
 
-	<div class="col-sm-3 sidebar hidden-xs" style="{% if site.sidebar_background_image %}background: url({{site.sidebar_background_image}}) no-repeat !important;{% endif %}">
-		{% include sidebar.html %}
-	</div>
-
-	<div class="col-sm-9 col-sm-offset-3">
-		{{ content }}
-	</div>
+		<div class="col-sm-9">
+			{{ content }}
+		</div>
+</div>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
