--- a/_includes/default.html
+++ b/_includes/default.html
@@ -37,8 +37,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
 	<!--<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>-->
 	<script src="https://sparcopen.github.io/opencon-dei-report/js/anchor.js"></script>
 	<script>
