load fonts really fast

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -19,6 +19,17 @@
 	<!-- Le styles -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
+	<link rel="preconnect"
+	      href="https://fonts.gstatic.com"
+	      crossorigin />
+
+	<link rel="preload"
+	      as="style"
+	      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
+
+	<link rel="stylesheet"
+	      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+	      media="print" onload="this.media='all'" />
 
 </head>
 
