--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,3 +3,10 @@ layout: default
 ---
 {% include page.html %}
 <script src="https://sparcopen.github.io/opencon-dei-report/js/anchor.js"></script>
+<script>
+anchors.options = {
+      placement: 'left',
+      visible: 'always',
+     };
+    anchors.add('p');
+</script>
