--- a/_includes/default.html
+++ b/_includes/default.html
@@ -18,18 +18,45 @@
 
 	<!-- Le styles -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
+
+	<!--
+		GET FONTS AND GET THEM FAST.
+		FROM: https://csswizardry.com/2020/05/the-fastest-google-fonts/
+
+	  - 1. Preemptively warm up the fonts’ origin.
+	  -
+	  - 2. Initiate a high-priority, asynchronous fetch for the CSS file. Works in
+	  -    most modern browsers.
+	  -
+	  - 3. Initiate a low-priority, asynchronous fetch that gets applied to the page
+	  -    only after it’s arrived. Works in all browsers with JavaScript enabled.
+	  -
+	  - 4. In the unlikely event that a visitor has intentionally disabled
+	  -    JavaScript, fall back to the original method. The good news is that,
+	  -    although this is a render-blocking request, it can still make use of the
+	  -    preconnect which makes it marginally faster than the default.
+	  -->
+
+	<!-- [1] -->
 	<link rel="preconnect"
 	      href="https://fonts.gstatic.com"
 	      crossorigin />
 
+	<!-- [2] -->
 	<link rel="preload"
 	      as="style"
 	      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
 
+	<!-- [3] -->
 	<link rel="stylesheet"
 	      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 	      media="print" onload="this.media='all'" />
+
+	<!-- [4] -->
+	<noscript>
+	  <link rel="stylesheet"
+	        href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
+	</noscript>
 
 </head>
 
