--- a/_includes/default.html
+++ b/_includes/default.html
@@ -18,6 +18,7 @@
 
 	<!-- Le styles -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 
 	<!--
 		GET FONTS AND GET THEM FAST.
