--- a/_includes/default.html
+++ b/_includes/default.html
@@ -75,14 +75,12 @@
 
 		</div>
 	</div>
-
-	<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
-	<!--<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>-->
+	<!-- Stick sidebar to the bottom on desktop -->
 	<script>
 		if (window.innerWidth > 790) {
 		document.getElementById("sidebar").style.height = window.innerHeight;
 		}
 	</script>
+
 </body>
 </html>
