add px to default height

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -81,7 +81,7 @@
 	<!--<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>-->
 	<script>
 		if (window.innerWidth > 790) {
-		document.getElementById("sidebar").style.height = window.innerHeight;
+		document.getElementById("sidebar").style.height = window.innerHeight+'px';
 		}
 	</script>
 </body>
