more junk to remove

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -78,7 +78,7 @@
 
 </body>
 
-<!-- Stick sidebar to the bottom on desktop -->
+<!-- Javascript (plain) to stick sidebar to the bottom on desktop -->
 <script>
 	if (window.innerWidth > 790) {
 		var body = document.body;
