--- a/_includes/default.html
+++ b/_includes/default.html
@@ -65,14 +65,17 @@
 	<div class="container">
 		<div class="row">
 
+			<!-- sidebar.html STARTS -->
 			<div class="col-sm-3 sidebar hidden-xs" {% if site.sidebar_background_image %}style="background: url({{site.sidebar_background_image}}) no-repeat !important;"{% endif %} id="sidebar">
 				{% include sidebar.html %}
 			</div>
+<!-- sidebar.html end -->
 
+<!-- PAGE CONTENT STARTS -->
 			<div class="col-sm-9">
 				{{ content }}
 			</div>
-
+<!-- PAGE CONTENT ENDS -->
 		</div>
 	</div>
 
