bring back functionality

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -78,7 +78,14 @@
 <!-- PAGE CONTENT ENDS -->
 		</div>
 	</div>
-
+	<script src="https://sparcopen.github.io/opencon-dei-report/js/anchor.js"></script>
+	<script>
+	anchors.options = {
+	      placement: 'left',
+	      visible: 'always',
+	     };
+	    anchors.add('p');
+	</script>
 </body>
 
 <!-- Javascript (plain) to stick sidebar to the bottom on desktop -->
