better deep link

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -82,7 +82,7 @@
 	<script>
 	anchors.options = {
 	      placement: 'left',
-	      visible: 'always',
+	      visible: 'touch',
 	     };
 	    anchors.add('p');
 	</script>
