--- a/_includes/default.html
+++ b/_includes/default.html
@@ -78,7 +78,7 @@
 <!-- PAGE CONTENT ENDS -->
 		</div>
 	</div>
-	<script src="https://sparcopen.github.io/opencon-dei-report/js/anchor.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 	<script>
 	anchors.options = {
 	      placement: 'left',
