more of these plz

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -84,7 +84,7 @@
 	      placement: 'left',
 	      visible: 'touch',
 	     };
-	    anchors.add('p');
+	    anchors.add('h1, h2, h3, h4, p');
 	</script>
 </body>
 
