--- a/_includes/default.html
+++ b/_includes/default.html
@@ -83,7 +83,7 @@
 	anchors.options = {
 	      placement: 'left',
 	      visible: 'touch',
-				icon; '# permalink',
+				icon: '# permalink',
 	     };
 	    anchors.add('h1, h2, h3, h4, p');
 	</script>
