--- a/_includes/default.html
+++ b/_includes/default.html
@@ -81,7 +81,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 	<script>
 	anchors.options = {
-	      placement: 'left',
+	      placement: 'right',
 	      visible: 'touch',
 				icon: '# permalink',
 	     };
