--- a/_includes/default.html
+++ b/_includes/default.html
@@ -78,6 +78,15 @@
 <!-- PAGE CONTENT ENDS -->
 		</div>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+	<script>
+	anchors.options = {
+	      placement: 'right',
+	      visible: 'touch',
+				icon: '# permalink',
+	     };
+	    anchors.add('h1, h2, h3, h4, p');
+	</script>
 </body>
 
 <!-- Javascript (plain) to stick sidebar to the bottom on desktop -->
