only on articles

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -85,7 +85,7 @@
 	      visible: 'touch',
 				icon: '# permalink',
 	     };
-	    anchors.add('h1, h2, h3, h4, p');
+	    anchors.add('.article_body h1, .article_body h2, .article_body h3, .article_body h4, .article_body p');
 	</script>
 </body>
 
