revert to default

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -81,9 +81,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 	<script>
 	anchors.options = {
-	      placement: 'right',
+	      placement: 'left',
 	      visible: 'touch',
-				icon: '# permalink',
 	     };
 	    anchors.add('.article_body h1, .article_body h2, .article_body h3, .article_body h4, .article_body p');
 	</script>
